--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -105,8 +104,19 @@
 .page {
   width: 210mm;
   height: 297mm;
-  padding: 10mm;
+  padding: 12mm;
+  margin: 0 auto;
   background: #fff;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  overflow: hidden;
+  position: relative;
   page-break-after: always;
   break-after: always;
+}
+
+.page:last-child {
+  page-break-after: auto;
+  break-after: auto;
 }
